force-app/main/default/objects/copado__Test_Script__c/copado__Test_Script__c.object-meta.xml
<CustomObject>
    <description>The template test script.</description>
    <label>Test Script</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Test Script Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>