force-app/main/default/objects/copado__Test_Script__c/fields/copado__Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>copado__Expected_Result__c</fullName>
    <label>Expected Result</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>