force-app/main/default/objects/copado__Test_Script__c/fields/copado__Introduction__c.field-meta.xml
<CustomField>
    <fullName>copado__Introduction__c</fullName>
    <label>Introduction</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>