force-app/main/default/objects/copado__Test_Script__c/fields/copado__Org__c.field-meta.xml
<CustomField>
    <fullName>copado__Org__c</fullName>
    <label>Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>