force-app/main/default/objects/copado__Test_Script__c/fields/copado__Peer_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>copado__Peer_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peer Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Scripts</relationshipLabel>
    <relationshipName>Test_Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>