force-app/main/default/objects/copado__Test_Script__c/fields/copado__Project__c.field-meta.xml
<CustomField>
    <fullName>copado__Project__c</fullName>
    <formula>copado__User_Story__r.copado__Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>