force-app/main/default/objects/copado__Test_Script__c/fields/copado__Sprint__c.field-meta.xml
<CustomField>
    <fullName>copado__Sprint__c</fullName>
    <formula>copado__User_Story__r.copado__Sprint__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint</label>
    <type>Text</type>
</CustomField>