force-app/main/default/objects/copado__Test_Script__c/fields/copado__Test_Title__c.field-meta.xml
<CustomField>
    <fullName>copado__Test_Title__c</fullName>
    <label>Test Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>