force-app/main/default/objects/copado__Test_Script__c/fields/copado__User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Test Scripts (User Story)</relationshipLabel>
    <relationshipName>Test_Scripts_UserStory</relationshipName>
    <type>Lookup</type>
</CustomField>