force-app/main/default/objects/copado__Test_Script__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Test_Title__c</columns>
    <columns>copado__Org__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>